Revert "PR output broke. Let's try removing that requirement" (#40)
* Revert "PR output broke. Let's try removing that requirement (#39)"

This reverts commit 5ac6a42f7b68314b82aef7d9dd7c3f2ab371ef34.

* see if it can create and merge its own PR

--- a/.github/workflows/org-metrics.yml
+++ b/.github/workflows/org-metrics.yml
@@ -15,3 +15,4 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: puppetlabs
           filename: profile/github-metrics.svg
+          output_action: pull-request-merge
