Give the action ability to create a PR
Whoops. That's what happens when you copy-paste setup configuration.

--- a/.github/workflows/org-metrics.yml
+++ b/.github/workflows/org-metrics.yml
@@ -9,6 +9,7 @@ jobs:
       name: production
     permissions:
       contents: write
+      pull-requests: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
